# realtime-microphone-transcription

./: .gitignore  README.md  docker-compose.yml  prompts.md  todo.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_transcription_sessions.py  0002_create_users_table.py  0003_add_user_id_to_sessions.py
backend/auth/: models.py  routers.py  schemas.py
backend/auth/utils/: email.py  jwt.py  password.py  response.py  user.py
backend/core/: config.py  db.py  deps.py
backend/core/exceptions/: __init__.py  http.py
backend/scripts/: generate_random_secret_key.py
backend/tests/: test_api.py
backend/transcription/: models.py  routers.py  schemas.py  services.py  websocket.py  whisper_engine.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx  page.tsx
frontend/app/(app)/sessions/: page.tsx
frontend/app/(app)/sessions/[id]/: page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/password-reset/: page.tsx
frontend/app/(auth)/signin/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/sessions/: page.tsx
frontend/app/sessions/[id]/: page.tsx
frontend/components/: app-sidebar.tsx
frontend/hooks/: use-audio-transcription.ts
frontend/lib/: config.ts  constants.ts  schemas.ts  sessions.ts  store.ts  types.ts  utils.ts
frontend/lib/api/: calls.ts  client.ts  endpoints.ts  errors.ts
